# GluOS

./: .gitignore  .vscode-ctags  Cargo.toml  README.md  build.rs  mem.txt  x86_64.json
.cargo/: config.toml
docs/: README.md  acpi.md  disk.md  fs.md  gdt.md  general.md  graphics.md  interrupts.md  keyboard.md  memory.md  mouse.md  net.md  pci.md  ps2.md  smp.md  task.md  time.md
src/: allocator.rs  bit_manipulation.rs  boot.rs  build.rs  fs.rs  gdt.rs  interrupts.rs  lib.rs  log.rs  main.rs  memory.rs  pci.rs  prompt.rs  serial.rs  state.rs  sync.rs  test.rs  timer.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/cpu/: madt.rs
src/cpu/rcore/: context.rs  mod.rs  processor.rs  scheduler.rs  thread_pool.rs  threads.rs
src/drivers/: gdt.rs  id.rs  keyboard.rs  mod.rs  mouse.rs  pit.rs  ps2.rs  qemu_in.rs  rand.rs  time.rs  userland.rs
src/drivers/acpi/: mod.rs
src/drivers/acpi/tables/: dsdt.rs  fadt.rs  hpet.rs  madt.rs  mod.rs  rsdt.rs  ssdt.rs  waet.rs
src/drivers/disk/: ata.rs  driver.rs  fs.rs  mod.rs  nvme.rs
src/drivers/disk/ata/: driver.rs  irq.rs  mod.rs
src/drivers/fs/: elf.rs  entry.rs  ext.rs  fat.rs  fs.rs  fs_driver.rs  mod.rs  ntfs.rs  partition.rs  path.rs  userland.rs
src/drivers/interrupts/: apic.rs  exceptions.rs  hardware.rs  idt.rs  mod.rs  msr.rs  multiprocessor.rs
src/drivers/memory/: acpi.rs  apic.rs  frame_allocator.rs  handler.rs  mod.rs  rsdp.rs
src/drivers/memory/allocator/: fixed_size_block.rs  mod.rs
src/drivers/memory/tables/: acpi.rs  fadt.rs  hpet.rs  madt.rs  mod.rs  rsdt.rs  waet.rs
src/drivers/network/: e1000.rs  ethernet.rs  mod.rs
src/drivers/pci/: formated_classes.txt  mod.rs  pci_data.rs  port.rs
src/drivers/smp/: ap.asm  mod.rs
src/drivers/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/drivers/terminal/: buffer.rs  console.rs  mod.rs  serial.rs  writer.rs
src/drivers/time/: cmos.rs  mod.rs  pit.rs
src/drivers/video/: drawer.rs  frame_buffer.rs  mod.rs
src/fs/: fs.rs  mod.rs
src/interrupts/: exceptions.rs  hardware.rs  idt.rs  mod.rs  timer.rs
src/memory/: acpi.rs  apic.rs  frame_allocator.rs  handler.rs  mod.rs  rsdp.rs
src/pci/: ata.rs  formated_classes.txt  ide.c  mod.rs  pci_data.rs  port.rs
src/pci/c/: CMakeLists.txt  ide.c
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/terminal/: buffer.rs  console.rs  mod.rs  prompt.rs  serial.rs  shell.rs  writer.rs
src/user/: log.rs  mod.rs  prompt.rs  shell.rs
src/user/shell_macro/: Cargo.toml
src/user/shell_macro/src/: lib.rs
src/video/: demo.c  frame_buffer.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  main.rs  read_from_ports.txt  stack_overflow.rs
