[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Sxmourai"]
autotests = true

[dependencies]
x86_64 = "0.14.10" # Usefull asm functions (inb outb, enable interrupts & all)
pc-keyboard = "0.7.0" # Easy transform from key code to char
pic8259 = "0.10.1"
bootloader = { version = "0.9.23", features = ["map_physical_memory", ]} #"map_physical_memory"
linked_list_allocator = "0.10.5" # A linked list allocator lib & also Heap
spin = "0.9.8" # We have our allocator, so we can use std::spin
uart_16550 = "0.3.0" # Talks to qemu
hashbrown = "0.14.0" # A hashmap/hashset & all implementation
lazy_static = { version = "1.4.0", features=["spin_no_std"]} # Helps us with static mut's & all
log = {version="0.4.20", default-features = false} # Logging facility (not that useful)
crossbeam-queue = { version = "0.3.10", default-features = false, features = ["alloc"]}
conquer-once = { version = "0.4.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"]}
bit_field = "0.10.2" # Usefull to read specific flags in u8...
bytemuck = {version="1.14.1", features = ["derive"]} # Very usefull for converting between types (Vec<u8> -> ExtSuperblock)
raw-cpuid = "11.0.1" # Gets some cpuid infos

# Our libs
pci-ids = { git = "https://github.com/Sxmourai/auto-pci-ids.rs.git" } # Pci ids to discover what is connected via pci
shell_macro = { path = "src/user/shell_macro" }

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    # DISKFLAG for build script (see /build/disk_create.py)
"-drive", "file=build/ext2mbr.img,format=raw",
"-drive", "file=build/fat32mbr.img,format=raw",
"-drive", "file=build/ext2gpt.img,format=raw",
    # ENDDISKFLAG
    # If working on APIC and IPI/SMP: (sets amount of cores to 4)
    #TODO When APIC feature automatically set -smp 4
    "-smp","4"
]
test-args = [
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[features]
default = []
pci-ids = []
ata = []
fs = ["ata"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = "z" # Optimize for size
strip = true
lto = true
panic = "abort" # disable stack unwinding on panic

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z" # Optimize for size
strip = true
lto = true
panic = "abort" # disable stack unwinding on panic
